# ai-navigation

./: .gitignore  .gitmodules  CODEX_NOTES.md  LICENSE  README.md  TeleopTestScriptOutline.txt  WORKLOG_2026-06-02.md  critical_adversarial_points  critical_adversarial_points.py  index.html  ros2_attack.py  shift_graph.py
.github/ISSUE_TEMPLATE/: feature_request.md  feature_request.yml
cart_control/: run_autonomous.sh
cart_control/cart_launch/: README.md  package.xml  setup.cfg  setup.py
cart_control/cart_launch/autonomous_launch/: cart_config_resolver.py
cart_control/cart_launch/config/: cart_james.yaml  cart_madison.yaml
cart_control/cart_launch/launch/: autonomous_cart_launch.launch.py  autonomous_launcher.launch.py  james_mola_autonomy.launch.py  mola_autonomy.launch.py
cart_control/cart_launch/rviz/: localization.rviz  mola_localization.rviz  radar_pov.rviz
cart_control/localization_launch/: README.md  package.xml  setup.cfg  setup.py
cart_control/localization_launch/config/: common.yaml  ekf_lio.yaml  object_detection.yaml  profile_2d.cfg
cart_control/localization_launch/launch/: cameras.launch.py  combined_launch.launch.py  ekf_lio.launch.py  garmin_gps18x.launch.py  lidar_imu_only.launch.py  lidar_localization.launch.py  lio-sam.launch.py  lio-sam.launch2.py  localization_direct_launcher.launch.py  localization_full_launcher.launch.py  localization_full_launcher.launch.py.defunct  mola_autonomy.launch.py  mola_lidar_odometry.launch.py  mola_map_localization.launch.py  mola_mapper.launch.py  mola_sensor_bringup.launch.py  velodyne_only.launch.py  zed_camera.launch.py  zed_config.yaml  zed_multi_camera.launch.py  zed_single.launch.py
cart_control/localization_launch/launch/install/: local_setup.sh  setup.sh
cart_control/localization_launch/launch/log/: latest_build
cart_control/localization_launch/localization_launch/: garmin_gps18x_driver.py  gps_filter.py  iwr6843_radar_node.py  lifecycle_bringup.py  mola_auto_localization_supervisor.py  mola_odom_to_tf.py  pcl_pose_relay.py  tf_fallback_publisher.py  velodyne_packet_downsample_filter.py  velodyne_pointcloud_tf_fallback.py  zed_odom_to_base_link.py
cart_control/localization_launch/param/: localization.yaml  mola_auto_localization_supervisor.yaml  zed_multi.urdf.xacro
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/cart_launch/share/cart_launch/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/localization_launch/share/localization_launch/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/motor_control_interface/share/motor_control_interface/rust/: Cargo.toml
install/motor_control_interface/share/motor_control_interface/rust/src/: msg.rs
install/motor_control_interface/share/motor_control_interface/rust/src/msg/: rmw.rs
install/navigation_interface/share/navigation_interface/rust/: Cargo.toml  build.rs
install/navigation_interface/share/navigation_interface/rust/src/: lib.rs  msg.rs
install/navigation_interface/share/navigation_interface/rust/src/msg/: rmw.rs
log/: latest_build
mapping/global-graph-demo/: .gitignore  draw_all.py  draw_nodes.py  draw_paths.py  pyvenv.cfg  transformer.py
mapping/mapping_launch/: package.xml  setup.cfg  setup.py
mapping/mapping_launch/launch/: mapping.launch.py
mapping/maps/: map.simplemap
mapping_scripts/: lio_samMap.py
motor_control/: README.md  TeleopTestScriptOutline.txt  package.xml  requirements.txt  setup.py
motor_control/launch/: manual.launch.py  motor.launch.py
motor_control/motor_control/: motor_endpoint.py  motor_endpoint_test.py  simulated_motor_endpoint.py  steering_position_calc.py
motor_control/resource/: docker_startup_script.sh  requirements.txt  startup_script.sh
motor_control/temp/: old_control.py  rescue_node.py
motor_control/test/: motor_control_test.py
motor_control_interface/: CMakeLists.txt  README.md  package.xml
motor_control_interface/msg/: Vel.msg  vel_angle_planned.msg  vel_curr.msg
navigation/: CALIBRATION.md  README.md  package.xml  setup.py
navigation/launch/: navigation.launch.py  navigation_params.launch.py  obstacle_conversion.launch.py  pointcloud-to-laserscan.launch.py  sim_nav.launch.py
navigation/maps/: main_gps.gml  main_graph_config.yaml  main_shift2.gml  main_shift3_gps.gml  main_shift3_ros.gml  main_shift5.gml  main_shift6.gml  with_gps2.yaml  with_gps2_adjusted_route.yaml
navigation/navigation/: cart_viz_server.py  collision_avoidance_aad_log.py  collision_detector.py  cubic_spline_planner.py  display_global_path.py  executor_utils.py  frames_2025-04-10_17.39.11.gv  global_planner.py  gml_to_gps.py  gps_node.py  lidar_object_to_obstacle.py  local_planner.py  nav_cmd_to_twist.py  off_path_detector.py  pose_bridge.py  publish_initial_map_viz.py  publish_point.py  pure_pursuit.py  radar_filter_sliders.py  radar_object_to_obstacle.py  radar_pcl_to_obstacles.py  radar_xyz_filter.py  simple_gps_util.py  simulated_motor_endpoint.py  speed_node.py  steering_position_calc.py  summer2026_fallback_node_migration.md  test_global.py  visualize_graph.py  wait_for_rviz_subscriber.py  waypoint_creation.py  zed_object_to_markers.py  zed_object_to_obstacle.py
navigation/navigation/navigation/: path_creation.py
navigation/navigation/navigation/maps/: main_shift4.gml
navigation/resource/: global_planner.py  local_planner.py  requirements.txt  zed_object_to_obstacle.py  zed_object_to_obstacleOG.py
navigation/scripts/: preprocess_pcd.py
navigation/simulator/: visualize_path.rviz
navigation/test/: test_off_path_detection.py  visualize_path.rviz  waypoint_creation.rviz
navigation/web/: cart-viz.css  cart-viz.js  index.html
navigation_interface/: CMakeLists.txt  README.md  package.xml
navigation_interface/msg/: LatLongArray.msg
scripts/: launch_james_mola_stack.sh  launch_mola_stack.sh
simulator/: package.xml  setup.py
simulator/launch/: sim_nav.launch.py
src/: main.tsx
teleop/: README.md  setup.py
teleop/teleop/: old_teleop_node.py  teleop_node.py
(+287 files in other folders)
