<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>localization_launch</name>
  <version>0.0.0</version>
  <description>A ROS 2 package to launch the localization system including Velodyne drivers, point cloud transformations, and RViz for visualization.</description>
  <maintainer email="sensors@todo.todo">sensors</maintainer>
  <license>Apache 2.0</license> 

  <exec_depend>ros2launch</exec_depend>
  
  <depend>rviz2</depend>
  <depend>velodyne_driver</depend>
  <depend>velodyne_pointcloud</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
