<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>localization_launch</name>
  <version>0.0.0</version>
  <description>A ROS 2 package to launch the localization system including Velodyne drivers, point cloud transformations, and RViz for visualization.</description>
  <maintainer email="sensors@todo.todo">sensors</maintainer>
  <license>Apache 2.0</license> 

  <exec_depend>ros2launch</exec_depend>
  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>lifecycle_msgs</exec_depend>
  <exec_depend>lidar_localization_ros2</exec_depend>
  <exec_depend>python3-yaml</exec_depend>
  <exec_depend>rclcpp_components</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>xacro</exec_depend>
  
  <depend>rviz2</depend>
  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>velodyne_driver</depend>
  <depend>velodyne_msgs</depend>
  <depend>velodyne_pointcloud</depend>
  <depend>tf2_sensor_msgs</depend>
  <depend>python3-numpy</depend>
  <depend>python3-tf-transformations</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
