[package]
name = "motor_control_interface"
version = "0.0.0"
edition = "2021"

[dependencies]
rosidl_runtime_rs = "0.6"
serde = { version = "1", optional = true, features = ["derive"] }
serde-big-array = { version = "0.5.1", optional = true }

# ROS Dependencies
geometry_msgs = "*"
builtin_interfaces = "*"
service_msgs = "*"
std_msgs = "*"
sensor_msgs = "*"

[features]
serde = ['dep:serde', 'dep:serde-big-array', 'rosidl_runtime_rs/serde', 'geometry_msgs/serde', 'builtin_interfaces/serde', 'service_msgs/serde', 'std_msgs/serde', 'sensor_msgs/serde']

[package.metadata.rclrs]
reexport = true
